@@ -4,33 +4,29 @@ import de.dkfz.sbst.tichawa.util.converter.parser.configuration.*;
 import lombok.*;
 import reactor.core.publisher.*;
 
-import java.nio.file.*;
+import java.nio.file.Path;
 import java.util.*;
-import java.util.regex.*;
 import java.util.stream.*;
 
-@Data
-@With
-@AllArgsConstructor
-@RequiredArgsConstructor
-public class SimpleStringParser implements ReactiveParser<String, String>
+@Value
+@EqualsAndHashCode(callSuper=true)
+public class SimpleStringParser extends ReactiveParser<String, String>
 {
-  private static final Pattern INSTANT_PATTERN = Pattern.compile("^(\\d{4})-(\\d{2})-(\\d{2})" +
-      "T(\\d{2}):(\\d{2}):(\\d{2})Z$");
-  private final String name;
-  private final Path outputPath;
-  private final String inSeparator;
-  private final String outSeparator;
+  String inSeparator;
+  String outSeparator;
 
-  private Configuration config;
-  private List<String> inHeaders = Collections.emptyList();
-
-  @Override
-  public boolean configure(Configuration config, String... inHeaders)
+  public SimpleStringParser(String name, Path outputPath, String inSeparator, String outSeparator)
   {
-    this.config = config;
-    this.inHeaders = Arrays.asList(inHeaders);
-    return isReady();
+    super(name, outputPath);
+    this.inSeparator = inSeparator;
+    this.outSeparator = outSeparator;
+  }
+
+  public SimpleStringParser(String name, Path outputPath, Configuration config, String inSeparator, String outSeparator, String... inHeaders)
+  {
+    super(name, outputPath, config, List.of(inHeaders));
+    this.inSeparator = inSeparator;
+    this.outSeparator = outSeparator;
   }
 
   @Override
@@ -44,11 +40,6 @@ public class SimpleStringParser implements ReactiveParser<String, String>
     {
       return Optional.empty();
     }
-  }
-
-  public boolean isReady()
-  {
-    return getConfig() != null && !getInHeaders().isEmpty();
   }
 
   @Override
@@ -87,53 +78,6 @@ public class SimpleStringParser implements ReactiveParser<String, String>
     }
   }
 
-  private void parseInto(String label, String data, Map<String, Rule.Result<Object>> output)
-  {
-    getConfig().rules().stream()
-        .filter(rule -> rule.getInLabel().equals(label))
-        .map(rule -> Configuration.getParsers(rule.getInType()).stream()
-            .map(parser ->
-            {
-              try
-              {
-                return parser.apply(data);
-              }
-              catch(Exception ex)
-              {
-                return ex;
-              }
-            }).filter(obj -> !(obj instanceof Exception))
-            .filter(rule::canApply)
-            .map(rule::tryApply)
-            .filter(Optional::isPresent)
-            .map(Optional::get)
-            .findFirst())
-        .filter(Optional::isPresent)
-        .map(Optional::get)
-        .forEach(result -> output.putIfAbsent(result.label(), result));
-  }
-
-  private Optional<Rule<Object, Object>> getFilterStatus(String label, String data)
-  {
-    return getConfig().rules().stream()
-        .filter(rule -> rule.getMode() == Rule.Mode.FILTER)
-        .filter(rule -> rule.getInLabel().equals(label))
-        .filter(rule -> Configuration.getParsers(rule.getInType()).stream()
-            .map(parser ->
-            {
-              try
-              {
-                return parser.apply(data);
-              }
-              catch(Exception ex)
-              {
-                return ex;
-              }
-            }).filter(obj -> !(obj instanceof Exception))
-            .anyMatch(rule::canApply))
-        .findAny();
-  }
-
   @Override
   public String encode(Map<String, Rule.Result<Object>> data)
   {
@@ -144,26 +88,6 @@ public class SimpleStringParser implements ReactiveParser<String, String>
         .map(Object::toString)
         .map(this::format)
         .collect(Collectors.joining(getOutSeparator()));
-  }
-
-  protected String format(String input)
-  {
-    Matcher instant = INSTANT_PATTERN.matcher(input);
-    if(instant.matches())
-    {
-      return String.format("%s-%s-%s %s:%s:%s", instant.group(1), instant.group(2), instant.group(3),
-          instant.group(4), instant.group(5), instant.group(6));
-    }
-    else
-    {
-      return input;
-    }
-  }
-
-  @Override
-  public List<String> getHeaders()
-  {
-    return getConfig().getOutLabels();
   }
 
   @Override
